--- a/modules/examples/src/todo/zippy.html
+++ b/modules/examples/src/todo/zippy.html
@@ -7,7 +7,7 @@
       Title
     </span>
   </div>
-  <div class="zippy-content" template="if:visible">
+  <div class="zippy-content" [hidden]="visible">
     <content></content>
   </div>
 </div>
